--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,23 @@
+# Node
 node_modules/
-/dist
-/build
-.env
-.env.local
-.env.*.local
-npm-debug.log*
-.DS_Store
-.idea/
-.vscode/
-public/uploads/
-kbr-organics-backend/node_modules/
-kbr-organics-backend/.env
+frontend/node_modules/
+backend/node_modules/
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build outputs
+dist/
+build/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Env files
+.env
+
+# Editor
+.vscode/
+.idea/
+
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
